fix first row after "abby row" being squished to the right in firefox
remove problematic .abby { float: left }

--- a/team-assets/css/Meet_the_team.css
+++ b/team-assets/css/Meet_the_team.css
@@ -1,4 +1,3 @@
-
 .Middle{
     width: 100%;
     text-align: center;
@@ -6,11 +5,7 @@
     font-weight: 750;
     margin-top: 1em;
 }
-.abby{
-    
-    
-    float: left;
-}
+
 .free-space{
     height:3em;
     
@@ -43,7 +38,6 @@
 
 .abby .big{
     margin-top:0em;
-    
 }
 .col-card{
     margin-bottom: 2em;
